--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "expo lint"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -21,6 +24,8 @@
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/react-native": "^13.0.1",
+    "@types/react-native": "^0.72.8",
+    "@types/redux-mock-store": "^1.5.0",
     "@types/redux-persist": "^4.0.0",
     "@unimodules/core": "^7.2.0",
     "expo": "~52.0.25",
@@ -38,6 +43,8 @@
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
     "formik": "^2.4.6",
+    "jest": "~29.7.0",
+    "jest-expo": "~52.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
@@ -49,13 +56,14 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
+    "redux-mock-store": "^1.5.5",
     "redux-persist": "^6.0.0",
     "redux-persist-expo-securestore": "^2.0.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.7.0",
